# paris

./: .gitignore  Dockerfile  config.py  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.yaml  docker-compose.yml  mypy.ini  package.json  project.env  pyproject.toml  start_selenium.sh  start_worker.sh  tailwind.config.js  version_up.sh  webpack.config.js
.github/workflows/: build-deploy.yaml  develop.yaml  prod-deploy.yaml  python-app.yml  ssh-test.yaml
app/: __init__.py  logger.py
app/commands/: __init__.py  test_tickets_gen.py  tickets_gen.py
app/controllers/: __init__.py  bot.py  browser.py  parser.py  selenium.py  ticket.py
app/forms/: __init__.py  day.py  period.py  schedule.py  ticket_order.py  user.py
app/models/: __init__.py  bot.py  bot_log.py  job_done.py  scheduler_config.py  telegram_chat.py  ticket_date.py  ticket_order.py  ticket_time.py  user.py
app/schema/: __init__.py  base.py  bot.py  order_status.py  task.py  ticket_date.py  ticket_time.py  user.py
app/templates/: header.html  sidebar.html
app/views/: __init__.py  auth.py  bot.py  dashboard.py  tasks.py  ticket.py  ticket_order.py  user.py
migrations/: env.py
migrations/versions/: 035e32344534_bot_refactor.py  18f496d92e5a_tickets_order.py  4163664b309f_tg_chat.py  623673a2c254_user_remove_activated.py  6a7135cb0174_init.py  6c4533c578eb_celery.py  740fbf35a793_task.py  8af358c0fb48_task_id.py  a45e1ba4e8df_tg_chat.py  dbfa54df8f21_bot.py  (+2 more)
src/: bot.ts  dashboard.ts  task.ts  ticket.ts  user.ts
tests/: conftest.py  test_auth.py  test_tasks.py
(+53 files in other folders)
