[tool.poetry]
name = "paris.simple2b"
version = "0.1.28"
description = "Crowler "
authors = ["Simple2B <simple2b.info@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
click = "^8.1.3"
email-validator = "^1.3.1"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.7"
alchemical = "^0.7.1"
selenium = "^4.11.2"
redis = "^4.6.0"
celery = {extras = ["redis"], version = "^5.3.1"}
apscheduler = "^3.10.1"
flask-apscheduler = "^1.12.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
faker = "^18.3.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
